--- a/SitemaLanche/appsettings.json
+++ b/SitemaLanche/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-SLDVDQJ;Initial Catalog=LanchesEB;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-M58V5BB;Initial Catalog=LanchesEB;Integrated Security=True"
   },
   "Logging": {
     "IncludeScopes": false,
